Sync source with commons-beanutils-1.9.4